--- a/WithLithum.Common.Rage/WithLithum.Core.Rage.csproj
+++ b/WithLithum.Common.Rage/WithLithum.Core.Rage.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
     <Nullable>disable</Nullable>
-    <AssemblyName>WithLithum.Common.Rage</AssemblyName>
-    <RootNamespace>WithLithum.Common</RootNamespace>
+    <AssemblyName>WithLithum.Core.Rage</AssemblyName>
+    <RootNamespace>WithLithum.Core</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
