--- a/WithLithum.Common.Rage/WithLithum.Core.Rage.csproj
+++ b/WithLithum.Common.Rage/WithLithum.Core.Rage.csproj
@@ -5,6 +5,7 @@
     <Nullable>disable</Nullable>
     <AssemblyName>WithLithum.Core.Rage</AssemblyName>
     <RootNamespace>WithLithum.Core</RootNamespace>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
