--- a/WithLithum.Common.Rage/WithLithum.Core.Rage.csproj
+++ b/WithLithum.Common.Rage/WithLithum.Core.Rage.csproj
@@ -33,4 +33,8 @@
     <PackageReference Include="RagePluginHook" Version="1.86.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
+
 </Project>
