--- a/WithLithum.Common.Rage/WithLithum.Core.Rage.csproj
+++ b/WithLithum.Common.Rage/WithLithum.Core.Rage.csproj
@@ -22,6 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
     <None Include="..\CommonRph.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
